--- a/index.html
+++ b/index.html
@@ -16,17 +16,62 @@
 <body class="container">
     <article class='start'>
         <h1 class="mt-5 text-center">Which Serengeti animal is like me?</h1>
-        <button type="button" class="btn btn-primary mt-5">Start the test!</button>
+        <button type="button" class="btn btn-primary mt-5" onclick="start();">Start the test!</button>
     </article>
-    <!-- boot strap JS import links  -->
+    <article class="question">
+        <!-- Implementing Progress Bar -->
+        <div class="progress mt-5">
+            <div class="progress-bar" role="progressbar" style="width: calc(100/12*1%)" aria-valuenow="25"
+                aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <h2 id="title" class="text-center mt-5">Question</h2>
+        <input type="hidden" value="EI">
+        <button id="A" type="button" class="btn btn-primary mt-2">A.</button>
+        <button id="B" type="button" class="btn btn-primary mt-2">B.</button>
+
+    </article>
+    <input type="hidden" id="EI" value="0">
+    <input type="hidden" id="SN" value="0">
+    <input type="hidden" id="TF" value="0">
+    <input type="hidden" id="JP" value="0">
+
+    <!-- Jquery link imported -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
+    <!-- Bootstrap JS import links  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
     <script>
+        var num = 1;
 
+        var q = {
+            1: { "title": "Q1", "type": "EI", "A": "E", "B": "I" },
+            2: { "title": "Q2", "type": "EI", "A": "E", "B": "I" },
+            3: { "title": "Q3", "type": "EI", "A": "E", "B": "I" }
+        }
+        function start() {
+            $(".start").hide();
+            $(".question").show();
+        }
+        $("#A").click(function () {
+            var type = $("#type").val();
+            var preValue = $("#" + type).val();
+            $("#" + type).val(parseInt(preValue) + 1);
+            next();
+        });
+        $("B").click(function () {
+            next();
+        });
+        function next() {
+            $(".progress-bar").attr('style', 'width: calc(100/12*' + num + '%)')
+            $("#title").html(q[num]["title"]);
+            $("#type").val(q[num]["type"]);
+            $("#A").val(q[num]["A"]);
+            $("#B").val(q[num]["B"]);
+            num++;
+        }
     </script>
 </body>
 
