--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
                 aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h2 id="title" class="text-center mt-5">Question</h2>
-        <input type="hidden" value="EI">
-        <button id="A" type="button" class="btn btn-primary mt-2">A.</button>
-        <button id="B" type="button" class="btn btn-primary mt-2">B.</button>
+        <input id="type" type="hidden" value="EI">
+        <button id="A" type="button" class="btn btn-primary mt-2">A</button>
+        <button id="B" type="button" class="btn btn-primary mt-2">B</button>
+    </article>
+    <article class="result">
+        <img id="img" class="rounded-circle mt-5" src="lion.jpg" alt="animal">
+        <h2 id="animal" class="text-center mt-5">What animal:</h2>
+        <h3 id="explain" class="text-center mt-5">Explnation: </h3>
 
     </article>
     <input type="hidden" id="EI" value="0">
@@ -49,11 +54,26 @@
         var q = {
             1: { "title": "Q1", "type": "EI", "A": "E", "B": "I" },
             2: { "title": "Q2", "type": "EI", "A": "E", "B": "I" },
-            3: { "title": "Q3", "type": "EI", "A": "E", "B": "I" }
+            3: { "title": "Q3", "type": "EI", "A": "E", "B": "I" },
+            4: { "title": "Q4", "type": "SN", "A": "S", "B": "N" },
+            5: { "title": "Q5", "type": "SN", "A": "S", "B": "N" },
+            6: { "title": "Q6", "type": "SN", "A": "S", "B": "N" },
+            7: { "title": "Q7", "type": "TF", "A": "T", "B": "F" },
+            8: { "title": "Q8", "type": "TF", "A": "T", "B": "F" },
+            9: { "title": "Q9", "type": "TF", "A": "T", "B": "F" },
+            10: { "title": "Q10", "type": "JP", "A": "J", "B": "P" },
+            11: { "title": "Q11", "type": "JP", "A": "J", "B": "P" },
+            12: { "title": "Q12", "type": "JP", "A": "J", "B": "P" }
+        }
+        var result = {
+            "ISTJ": { "animal": "Hippo", "explain": "hippo explain", "img": "lion.jpg" },
+            "ENFP": { "animal": "Cool Lion", "explain": "lion explain", "img": "lion.jpg" },
+            "ENTJ": { "animal": "Tiger", "explain": "Tiger explain", "img": "lion.jpg" }
         }
         function start() {
             $(".start").hide();
             $(".question").show();
+            next();
         }
         $("#A").click(function () {
             var type = $("#type").val();
@@ -61,16 +81,30 @@
             $("#" + type).val(parseInt(preValue) + 1);
             next();
         });
-        $("B").click(function () {
+        $("#B").click(function () {
             next();
         });
         function next() {
-            $(".progress-bar").attr('style', 'width: calc(100/12*' + num + '%)')
-            $("#title").html(q[num]["title"]);
-            $("#type").val(q[num]["type"]);
-            $("#A").val(q[num]["A"]);
-            $("#B").val(q[num]["B"]);
-            num++;
+            if (num == 13) {
+                $(".question").hide();
+                $(".result").show();
+                var mbti = "";
+                ($("#EI").val() < 2) ? mbti += "I" : mbti += "E";
+                ($("#EI").val() < 2) ? mbti += "N" : mbti += "S";
+                ($("#EI").val() < 2) ? mbti += "F" : mbti += "T";
+                ($("#EI").val() < 2) ? mbti += "P" : mbti += "J";
+                alert(mbti);
+                $("#img").attr("src", result[mbti]["img"]);
+                $("#animal").html(result[mbti]["animal"]);
+                $("#explain").html(result[mbti]["explain"]);
+            } else {
+                $(".progress-bar").attr('style', 'width: calc(100/12*' + num + '%)')
+                $("#title").html(q[num]["title"]);
+                $("#type").html(q[num]["type"]);
+                $("#A").html(q[num]["A"]);
+                $("#B").html(q[num]["B"]);
+                num++;
+            }
         }
     </script>
 </body>
